--- a/src/app/websource/hypetrain/train/locomotive/locomotive.component.html
+++ b/src/app/websource/hypetrain/train/locomotive/locomotive.component.html
@@ -2,9 +2,29 @@
 <div class="anchor" [@entry]="entryState" (@entry.done)="animationProgress()" [ngStyle]="{top: coordinates.y+'px', left: coordinates.x+'px'}">
 
     <div class="container" [ngStyle]="{width: (viewport.width - coordinates.x)+'px'}">
-        <div class="train" [@shake]="shakeState" (@shake.done)="shakeState = +shakeState + 1 === shakeKeyframes ? 0 : +shakeState + 1" [ngStyle]="{width: (size.width * (scale||1))+'px', height: (size.height * (scale||1))+'px'}">
-            <img class="picture" [src]="user.picture" [ngStyle]="{top: _pictureBounds.top+'px', width: _pictureBounds.width+'px', left: _pictureBounds.left+'px', height: _pictureBounds.height+'px'}">
-            <div class="top" [ngStyle]="{top: (pictureBounds.top! * scale)+'px', width: (pictureBounds.width! * scale)+'px', left: (pictureBounds.left! * scale)+'px', height: (pictureBounds.height! * scale)+'px'}"></div>
+        <div class="train" 
+             [@shake]="shakeState" (@shake.done)="shakeState = +shakeState + 1 === shakeKeyframes ? 0 : +shakeState + 1" 
+             [ngStyle]="{
+                 width: (size.width * (scale||1))+'px', 
+                 height: (size.height * (scale||1))+'px', 
+                 'background-image': backgroundPic ? 'url(' + backgroundPic + ')' : ''
+                }">
+            <img class="picture" 
+                 [src]="user.picture" 
+                 [ngStyle]="{
+                     top: _pictureBounds.top+'px', 
+                     width: _pictureBounds.width+'px', 
+                     left: _pictureBounds.left+'px', 
+                     height: _pictureBounds.height+'px'
+                    }">
+            <div class="top" 
+                 [ngStyle]="{
+                     top: (pictureBounds.top! * scale)+'px', 
+                     width: (pictureBounds.width! * scale)+'px', 
+                     left: (pictureBounds.left! * scale)+'px', 
+                     height: (pictureBounds.height! * scale)+'px',
+                     'background-image': foregroundPic ? 'url(' + foregroundPic + ')' : ''
+                    }"></div>
         </div>
         <hypetrain-carriage *ngFor="let c of carriages; let i = index;"
                         [viewport]="viewport"
@@ -12,7 +32,9 @@
                         [scale]="c.scale"
                         [index]="i"
                         [pictureBounds]="c.pictureBounds"
-                        [user]="c.user">
+                        [user]="c.user"
+                        [backgroundPic]="c.backgroundPic"
+                        [foregroundPic]="c.foregroundPic">
         </hypetrain-carriage>
     </div>
     
