--- a/src/app/websource/hypetrain/hypetrain.component.html
+++ b/src/app/websource/hypetrain/hypetrain.component.html
@@ -229,13 +229,13 @@
         <app-uploader [name]="'carriage-background'" [url]="train.carriage.pictures.background" [uploaded]="pictureChangeSubject" [height]="'4rem'" [ngStyle]="{ 'margin-bottom': '.2rem' }"></app-uploader>
         <button mat-raised-button color="accent" (click)="defaultPicture('carriage-background')" [disabled]="!train.carriage.pictures.background" [ngStyle]="{ 'margin-bottom': '1rem' }">DEFAULT</button>
         <mat-form-field>
-          <input matInput type="number" placeholder="Original Width (px)" [disabled]="true" [(ngModel)]="train.carriage.size.width">
+          <input matInput type="number" placeholder="Background Width (px)" [disabled]="true" [(ngModel)]="train.carriage.size.width">
         </mat-form-field>
         <mat-form-field>
-          <input matInput type="number" placeholder="Picture Width (px)" [disabled]="true" [(ngModel)]="train.carriage.pictureBounds.width">
+          <input matInput type="number" placeholder="Foreground Width (px)" [disabled]="true" [(ngModel)]="train.carriage.pictureBounds.width">
         </mat-form-field>
         <mat-form-field>
-          <input matInput type="number" placeholder="Picture Left (px)" [disabled]="true" [(ngModel)]="train.carriage.pictureBounds.left">
+          <input matInput type="number" placeholder="Foreground Left (px)" [(ngModel)]="train.carriage.pictureBounds.left">
         </mat-form-field>
       </div>
       <div class="table-inner">
@@ -243,13 +243,13 @@
         <app-uploader [name]="'carriage-foreground'" [url]="train.carriage.pictures.foreground" [uploaded]="pictureChangeSubject" [height]="'4rem'" [ngStyle]="{ 'margin-bottom': '.2rem' }"></app-uploader>
         <button mat-raised-button color="accent" (click)="defaultPicture('carriage-foreground')" [disabled]="!train.carriage.pictures.foreground" [ngStyle]="{ 'margin-bottom': '1rem' }">DEFAULT</button>
         <mat-form-field>
-          <input matInput type="number" placeholder="Original Height (px)" [disabled]="true" [(ngModel)]="train.carriage.size.height">
+          <input matInput type="number" placeholder="Background Height (px)" [disabled]="true" [(ngModel)]="train.carriage.size.height">
         </mat-form-field>
         <mat-form-field>
-          <input matInput type="number" placeholder="Picture Height (px)" [disabled]="true" [(ngModel)]="train.carriage.pictureBounds.height">
+          <input matInput type="number" placeholder="Foreground Height (px)" [disabled]="true" [(ngModel)]="train.carriage.pictureBounds.height">
         </mat-form-field>
         <mat-form-field>
-          <input matInput type="number" placeholder="Picture Top (px)" [disabled]="true" [(ngModel)]="train.carriage.pictureBounds.top">
+          <input matInput type="number" placeholder="Foreground Top (px)" [(ngModel)]="train.carriage.pictureBounds.top">
         </mat-form-field>
       </div>
     </div>
