--- a/src/app/websource/hypetrain/hypetrain.component.html
+++ b/src/app/websource/hypetrain/hypetrain.component.html
@@ -87,7 +87,7 @@
     
 
     <h3>AUDIO</h3>
-    <div>Enabled&nbsp;&nbsp;&nbsp;<mat-slide-toggle [(ngModel)]="audio.enabled">{{audio.enabled ? 'ON' : 'OFF'}}</mat-slide-toggle></div>
+    <div>Enabled&nbsp;&nbsp;&nbsp;<mat-slide-toggle [disabled]="true" [(ngModel)]="audio.enabled">{{audio.enabled ? 'ON' : 'OFF'}}</mat-slide-toggle></div>
 
     <div>
       Volume: {{currentVolume}}&nbsp;
