--- a/src/app/websource/hypetrain/hypetrain.component.html
+++ b/src/app/websource/hypetrain/hypetrain.component.html
@@ -5,12 +5,14 @@
                           [viewport]="viewport"
                           [coordinates]="train.start" 
                           [size]="train.locomotive.size"
-                          [scale]="train.locomotive.scale"
+                          [scale]="currentLocomotiveScale"
                           [pictureBounds]="train.locomotive.pictureBounds"
                           [carriages]="carriages"
                           [user]="{name: 'eltharynd', picture: channelPic}"
                           [backgroundPic]="train.locomotive.pictures.background"
-                          [foregroundPic]="train.locomotive.pictures.foreground">
+                          [foregroundPic]="train.locomotive.pictures.foreground"
+                          [reverseDirection]="train.reverseDirection"
+                          [reverseWrap]="train.reverseWrap">
     </hypetrain-locomotive>
 
     <div class="info-text" *ngIf="infoText.enabled && currentMessage" [ngStyle]="{top: infoText.position === 'bottom' ? viewport.height+'px' : infoText.margin}">
@@ -42,8 +44,9 @@
       <button mat-raised-button color="accent" [disabled]="!(fader || timeout)">fade</button>
     </div>
     <div>
-      Level: {{currentLevel>0 ? currentLevel<6 ? currentLevel : 'ending' : 'none'}}&nbsp;
+      Level: 
       <mat-slider [disabled]="transitioning || currentLevel===6 || now - changedAt <= 500" [min]="0" max="6" step="1" (change)="prematureEnd = lastLevel!==5; onLevelChange()" [(ngModel)]="currentLevel"></mat-slider>
+      {{currentLevel>0 ? currentLevel<6 ? currentLevel : 'ending' : 'none'}}
     </div>
     <div>
       <button mat-raised-button color="accent" [disabled]="currentLevel>=6 ||currentLevel===0" (click)="currentLevel = 6; prematureEnd = true; onLevelChange()">fail (end)</button>
@@ -90,17 +93,20 @@
     <div>Enabled&nbsp;&nbsp;&nbsp;<mat-slide-toggle [disabled]="true" [(ngModel)]="audio.enabled">{{audio.enabled ? 'ON' : 'OFF'}}</mat-slide-toggle></div>
 
     <div>
-      Volume: {{currentVolume}}&nbsp;
+      Volume: 
       <mat-slider min="0.1" max="1" step="0.1" (change)="onVolumeChange()" [(ngModel)]="currentVolume"></mat-slider>
+      {{currentVolume}}
     </div>
   
     <div>
-      Runs of 4 before 5: {{audio.runsBeforeCompleted}}&nbsp;
+      Runs of 4 before 5: 
       <mat-slider min="1" max="10" step="1" [disabled]="currentLevel>=6" [(ngModel)]="audio.runsBeforeCompleted"></mat-slider>
+      {{audio.runsBeforeCompleted}}
     </div>
     <div>
-      <b>Failed</b> fading duration: {{audio.fadingLength}} secs&nbsp;
+      <b>Failed</b> fading duration: 
       <mat-slider min="10" max="180" step="10" [disabled]="fader" [(ngModel)]="audio.fadingLength"></mat-slider>
+      {{audio.fadingLength}} secs
     </div>
 
 
@@ -122,8 +128,9 @@
     </mat-form-field>
 
     <div>
-      Delay between messages: {{infoText.delay/1000}}s&nbsp;
+      Delay between messages: 
       <mat-slider min="0" max="5000" step="500" [(ngModel)]="infoText.delay"></mat-slider>
+      {{infoText.delay/1000}}s
     </div>
 
     <div>Position&nbsp;&nbsp;&nbsp;
@@ -184,6 +191,15 @@
       </div>
     </div>
 
+    <div>Train direction: <mat-slide-toggle [disabled]="true" [(ngModel)]="train.reverseDirection">{{train.reverseDirection ? 'RIGHT' : 'LEFT'}}</mat-slide-toggle></div>
+    <div>
+      Maximum rows:
+      <mat-slider min="1" max="10" step="1" (change)="resizeToFit()" [(ngModel)]="train.maxRows"></mat-slider>
+      {{train.maxRows}}
+    </div>
+    <div>New rows direction: <mat-slide-toggle [(ngModel)]="train.reverseWrap">{{train.reverseWrap ? 'UPWARD' : 'DOWNWARD'}}</mat-slide-toggle></div>
+    <br>
+    <br>
     <div>Linked scale: <mat-slide-toggle [(ngModel)]="scaleLinked"></mat-slide-toggle></div>
 
     <h3>LOCOMOTIVE</h3>
@@ -218,8 +234,9 @@
         </div>
       </div>
       <div>
-        Locomotive scale: {{train.locomotive.scale}}&nbsp;
+        Locomotive scale: 
         <mat-slider min=".1" max="2" step=".1" (change)="scaleChange()" [(ngModel)]="train.locomotive.scale"></mat-slider>
+        {{train.locomotive.scale}}
       </div>
 
     <h3>CARRIAGE</h3>
@@ -254,8 +271,9 @@
       </div>
     </div>
     <div>
-      Carriage scale: {{train.carriage.scale}}&nbsp;
+      Carriage scale: 
       <mat-slider min=".1" max="2" step=".1" (change)="scaleChange(true)" [(ngModel)]="train.carriage.scale"></mat-slider>
+      {{train.carriage.scale}}
     </div>
 
     <button class="save-button" mat-raised-button color="primary" [disabled]="data.busy" (click)="saveSettings()">SAVE</button>
