--- a/src/app/websource/hypetrain/hypetrain.component.html
+++ b/src/app/websource/hypetrain/hypetrain.component.html
@@ -78,7 +78,7 @@
     <h3>HYPE TRAIN TRACKS</h3>
     <app-uploader [name]="'hypetrain-track-1'" 
                   [displayTextOverride] = "'LVL 0->1 TRACK'"
-                  [disabled]="!audioLoaded"
+                  [disabled]="!audioLoaded || data.busy"
                   [uploaded]="trackChangeSubject" 
                   [height]="'4rem'" 
                   [ngStyle]="{ 'margin-bottom': '.2rem' }"></app-uploader>
@@ -86,7 +86,7 @@
     
     <app-uploader [name]="'hypetrain-track-2'" 
                   [displayTextOverride] = "'LVL 1->2 TRACK'"
-                  [disabled]="!audioLoaded"
+                  [disabled]="!audioLoaded || data.busy"
                   [uploaded]="trackChangeSubject" 
                   [height]="'4rem'" 
                   [ngStyle]="{ 'margin-bottom': '.2rem' }"></app-uploader>
@@ -94,7 +94,7 @@
     
     <app-uploader [name]="'hypetrain-track-3'" 
                   [displayTextOverride] = "'LVL 2->3 TRACK'"
-                  [disabled]="!audioLoaded"
+                  [disabled]="!audioLoaded || data.busy"
                   [uploaded]="trackChangeSubject" 
                   [height]="'4rem'" 
                   [ngStyle]="{ 'margin-bottom': '.2rem' }"></app-uploader>
@@ -102,7 +102,7 @@
 
     <app-uploader [name]="'hypetrain-track-4'" 
                   [displayTextOverride] = "'LVL 3->4 TRACK'"
-                  [disabled]="!audioLoaded"
+                  [disabled]="!audioLoaded || data.busy"
                   [uploaded]="trackChangeSubject" 
                   [height]="'4rem'" 
                   [ngStyle]="{ 'margin-bottom': '.2rem' }"></app-uploader>
@@ -110,7 +110,7 @@
     
     <app-uploader [name]="'hypetrain-track-5'" 
                   [displayTextOverride] = "'LVL 4->5(END) TRACK'"
-                  [disabled]="!audioLoaded"
+                  [disabled]="!audioLoaded || data.busy"
                   [uploaded]="trackChangeSubject" 
                   [height]="'4rem'" 
                   [ngStyle]="{ 'margin-bottom': '.2rem' }"></app-uploader>
