better track uploads

--- a/src/app/common/upload/upload.component.scss
+++ b/src/app/common/upload/upload.component.scss
@@ -86,7 +86,9 @@
 }
 
 
-.disabled {
+.disabled,
+.disabled > *,
+.disabled > * > * {
     filter: grayscale(.9);
-    position: none;
+    pointer-events: none;
 }
